# CST8219_GroupProject

./: .gitignore  README.md
PartA/: CMakeLists.txt  PartA.c  PartA.h
PartB/: Animation.cpp  part2.h
PartB_Final/: CMakeLists.txt  Frame.cpp  part2.cpp
PartC/: Animation.cpp  AnimationManager.cpp  CMakeLists.txt  Frame.cpp  PartC.cpp  PartC.h  animation.h
Part_A/: Part_A.c  Part_A.vcxproj  Part_A.vcxproj.filters
Sarfraj/: Animation.cpp  AnimationManager.cpp  Frame.cpp  part3.cpp
