# CMakeList.txt : CMake project for GroupProjectB, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (GroupProjectB "part2.cpp" "part2.h" "Animation.h" "Frame.h" "Frame.cpp" "Animation.cpp" )

# TODO: Add tests and install targets if needed.
